# social-audit-2020

./: .gitignore  pyproject.toml
src/sinar_social_audit_2020/: distribution.py  fields.py  preprocessor.py  relation.py
tests/: test_preprocessor.py  test_sinar_social_audit_2020.py
