[tool.poetry]
name = "sinar-social-audit-2020"
version = "0.1.0"
description = ""
authors = ["Jeffrey04 <mycyberpet@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
ipykernel = "^5.3.4"
jupyter-contrib-nbextensions = "^0.5.1"
pandas = "^1.1.4"
matplotlib = "^3.3.3"
numpy = "^1.19.4"
statsmodels = "^0.12.1"
scipy = "^1.5.4"
nbconvert = {extras = ["webpdf"], version = "^6.0.7"}
jupyterlab = "^2.2.9"
jupyterlab-code-formatter = "^1.3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
prospector = "^1.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
